package com.skuu.proxy;

/**
 * @author dcx
 * @since 2023-06-21 10:56
 **/
public class Order {
    public void create(int id) {
        System.out.println("create");
    }

    public void pay(int id) {
        System.out.println("pay");
    }
}
